--- a/style.scss
+++ b/style.scss
@@ -48,7 +48,7 @@ body{
 	position: relative;
 	background-color: $color7;
 	// box-shadow: 0px 25px 20px -15px rgba(0, 0, 0, 0.45) ;
-	// box-shadow: 0px 5px $color4, 0px 10px $color3, 0px 15px 1px $color1,0px 25px 20px -15px rgba(0, 0, 0, 0.45) ;;
+	// box-shadow: 0px 5px $color4, 0px 10px $color3, 0px 15px 1px $color1,0px 25px 20px -15px rgba(0, 0, 0, 0.45) ;
 }
 
 .dark-bg {
@@ -59,13 +59,6 @@ body{
 }
 // box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 
-// .name {
-
-	
-// 	position: relative;
-
-
-// }
 
 h1 {
 	position: relative;
